# rutina-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: app.yml  ci-cd.yml  deploy.yml  deployapp.yml  deplyapp.yml  prueba.yml
api/: Cargo.toml  Dockerfile
api/src/: db.rs  handler.rs  main.rs
data/: 01-schema.sql  02-data.sql  Dockerfile  init.sql
tests/: package-lock.json
tests/javascript/: api.test.js
tests/python/: test_api.py
