[package]
name = "rutinaAPP"
version = "0.1.0"
edition = "2021"

[dependencies]

sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio-native-tls", "offline"] }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"  # Para mejor manejo de JSON
thiserror = "1.0"   # Para manejo ergonómico de errores
